// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API tests should add a new goal 1`] = `
{
  "message": "Not Found: /api/goals/add",
  "stack": "Error: Not Found: /api/goals/add
    at notFound (file:///var/task/backend/middleware/error.js:6:17)
    at Layer.handle [as handle_request] (/var/task/node_modules/express/lib/router/layer.js:95:5)
    at trim_prefix (/var/task/node_modules/express/lib/router/index.js:328:13)
    at /var/task/node_modules/express/lib/router/index.js:286:9
    at Function.process_params (/var/task/node_modules/express/lib/router/index.js:346:12)
    at next (/var/task/node_modules/express/lib/router/index.js:280:10)
    at cors (/var/task/node_modules/cors/lib/index.js:188:7)
    at /var/task/node_modules/cors/lib/index.js:224:17
    at originCallback (/var/task/node_modules/cors/lib/index.js:214:15)
    at /var/task/node_modules/cors/lib/index.js:219:13",
}
`;

exports[`API tests should get a goal by ID 1`] = `
{
  "message": "Not Found: /api/goals/undefined",
  "stack": "Error: Not Found: /api/goals/undefined
    at notFound (file:///var/task/backend/middleware/error.js:6:17)
    at Layer.handle [as handle_request] (/var/task/node_modules/express/lib/router/layer.js:95:5)
    at trim_prefix (/var/task/node_modules/express/lib/router/index.js:328:13)
    at /var/task/node_modules/express/lib/router/index.js:286:9
    at Function.process_params (/var/task/node_modules/express/lib/router/index.js:346:12)
    at next (/var/task/node_modules/express/lib/router/index.js:280:10)
    at cors (/var/task/node_modules/cors/lib/index.js:188:7)
    at /var/task/node_modules/cors/lib/index.js:224:17
    at originCallback (/var/task/node_modules/cors/lib/index.js:214:15)
    at /var/task/node_modules/cors/lib/index.js:219:13",
}
`;

exports[`API tests should get all goals for a user 1`] = `
{
  "message": "Not Found: /api/goals/65f6cf15a0a6a67d2493d722",
  "stack": "Error: Not Found: /api/goals/65f6cf15a0a6a67d2493d722
    at notFound (file:///var/task/backend/middleware/error.js:6:17)
    at Layer.handle [as handle_request] (/var/task/node_modules/express/lib/router/layer.js:95:5)
    at trim_prefix (/var/task/node_modules/express/lib/router/index.js:328:13)
    at /var/task/node_modules/express/lib/router/index.js:286:9
    at Function.process_params (/var/task/node_modules/express/lib/router/index.js:346:12)
    at next (/var/task/node_modules/express/lib/router/index.js:280:10)
    at cors (/var/task/node_modules/cors/lib/index.js:188:7)
    at /var/task/node_modules/cors/lib/index.js:224:17
    at originCallback (/var/task/node_modules/cors/lib/index.js:214:15)
    at /var/task/node_modules/cors/lib/index.js:219:13",
}
`;

exports[`API tests should get weekly data 1`] = `
{
  "message": "Not Found: /api/goals/weekly-data/65f6cf15a0a6a67d2493d722",
  "stack": "Error: Not Found: /api/goals/weekly-data/65f6cf15a0a6a67d2493d722
    at notFound (file:///var/task/backend/middleware/error.js:6:17)
    at Layer.handle [as handle_request] (/var/task/node_modules/express/lib/router/layer.js:95:5)
    at trim_prefix (/var/task/node_modules/express/lib/router/index.js:328:13)
    at /var/task/node_modules/express/lib/router/index.js:286:9
    at Function.process_params (/var/task/node_modules/express/lib/router/index.js:346:12)
    at next (/var/task/node_modules/express/lib/router/index.js:280:10)
    at cors (/var/task/node_modules/cors/lib/index.js:188:7)
    at /var/task/node_modules/cors/lib/index.js:224:17
    at originCallback (/var/task/node_modules/cors/lib/index.js:214:15)
    at /var/task/node_modules/cors/lib/index.js:219:13",
}
`;
